data/forge_javadoc/1.8.9/raw/net/minecraft/client/stream/NullStream.md
---
title: "NullStream"
description: "mutes or unmutes the microphone based on the boolean parameter passed into the method"
package: "net/minecraft/client/stream"
version: "1.8.9"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.8.9-11.15.1.2318/net/minecraft/client/stream/NullStream.html"
sourceType: javadoc
---

# NullStream

## Class signature

```java
public class NullStream extends java.lang.Object implements IStream
```

## Constructors

- `public NullStream(java.lang.Throwable p_i1006_1_)`

## Methods

- `public void shutdownStream()`
- `public void func_152935_j()`
- `public void func_152922_k()`
- `public boolean func_152936_l()`
- `public boolean isReadyToBroadcast()`
- `public boolean isBroadcasting()`
- `public void func_152911_a( Metadata p_152911_1_, long p_152911_2_)`
- `public void func_176026_a( Metadata p_176026_1_, long p_176026_2_, long p_176026_4_)`
- `public boolean isPaused()`
- `public void requestCommercial()`
- `public void pause()`
- `public void unpause()`
- `public void updateStreamVolume()`
- `public void func_152930_t()`
- `public void stopBroadcasting()`
- `public IngestServer[] func_152925_v()`
- `public void func_152909_x()`
- `public IngestServerTester func_152932_y()`
- `public boolean func_152908_z()`
- `public int func_152920_A()`
- `public boolean func_152927_B()`
- `public java.lang.String func_152921_C()`
- `public ChatUserInfo func_152926_a(java.lang.String p_152926_1_)`
- `public void func_152917_b(java.lang.String p_152917_1_)`
- `public boolean func_152928_D()`
- `public ErrorCode func_152912_E()`
- `public boolean func_152913_F()`
- `public void muteMicrophone(boolean p_152910_1_)`
- `public boolean func_152929_G()`
- `public IStream.AuthFailureReason func_152918_H()`
- `public java.lang.Throwable func_152937_a()`

## Description

mutes or unmutes the microphone based on the boolean parameter passed into the method
